--- a/frontend/src/components/VertNavBar/VertNavBar.css
+++ b/frontend/src/components/VertNavBar/VertNavBar.css
@@ -6,7 +6,7 @@
   left: -150px; /* Partially hidden on the left side */
   height: 100%;
   width: 200px; /* Adjust the width as needed */
-  background-color: #cd561b;
+  background-image: linear-gradient(to top, #cd561b, #ffb347); /* Replace colors as desired */
   color: #fff;
   transition: left 0.2s ease-in-out;
   z-index: 999;
