--- a/frontend/src/components/workshop/Workshop.css
+++ b/frontend/src/components/workshop/Workshop.css
@@ -5,7 +5,7 @@
   .page-content {
     flex-grow: 1;
     margin-left: 50px;
-    padding: 2%;
+    padding-left: 2%;
     transition: margin-left 0.2s ease-in-out;
   }
   
