--- a/frontend/src/components/VertNavBar/VertNavBar.css
+++ b/frontend/src/components/VertNavBar/VertNavBar.css
@@ -3,10 +3,10 @@
 .VertNavbar {
   position: fixed;
   top: 0;
-  left: -150px; /* Partially hidden on the left side */
+  left: -150px;
   height: 100%;
-  width: 200px; /* Adjust the width as needed */
-  background-image: linear-gradient(to bottom, #cd561b, #9f4112); /* Replace colors as desired */
+  width: 200px;
+  background-image: linear-gradient(to bottom, #cd561b, #9f4112);
   color: #fff;
   transition: left 0.2s ease-in-out;
   z-index: 999;
@@ -17,7 +17,7 @@
 }
 
 .VertNavbar.expanded {
-  left: 0; /* Slides in when 'expanded' state is true */
+  left: 0; 
 }
 
 .VertNavbar-logo {
@@ -43,20 +43,44 @@
   display: flex;
   align-items: center;
   width: 100%;
-  padding-right: 0px;
 }
 
-.VertNavbar-links ul li.spacer {
-  height: 20px; /* Set the desired height for the spacer */
-  background-color: transparent; /* Optional: Make the spacer invisible */
+.VertNavbar-links ul li .react-icon {
+  margin-left: auto;
+  margin-right: 3px;
 }
 
 .bottom-section {
+  margin-bottom: 10px;
+  padding-bottom: 15px;
+}
+
+.bottom-section ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.bottom-section ul li {
+  display: flex;
+  align-items: center;
   padding: 10px;
-  margin-bottom: 10px; /* Add margin between the bottom section and other content */
+}
+
+.bottom-section ul li a {
+  text-decoration: none;
+  color: inherit;
+  display: flex;
+  align-items: center;
+  justify-content: space-between; /* Adjust to center text and icon */
+  width: 100%;
+}
+
+/* Adjust icon alignment if necessary */
+.bottom-section ul li .react-icon {
+  margin-left: 3px; /* Adjust if needed */
 }
 
 .react-icon {
   flex-shrink: 0;
-  margin-left: auto;
 }
