--- a/frontend/src/components/header/header.css
+++ b/frontend/src/components/header/header.css
@@ -2,7 +2,7 @@
 .HeaderMainBar {
     color: #fff;
     width: 100%;
-    text-align: center;
+    text-align: right;
     align-items: center; /* Center content vertically */
     justify-content: flex-end; /* Align content to the right */
   }
@@ -13,5 +13,5 @@
     width: 160px;
     padding-top: 10px;
     padding-bottom: 0px;
-    padding-right: 30px;
+    padding-right: 50px;
   }
