--- a/frontend/src/Pages/style.css
+++ b/frontend/src/Pages/style.css
@@ -10,6 +10,20 @@
 .shifted-content {
   margin-left: 200px;
 }
+.button-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+.button-container button {
+  padding: 10px;
+  font-size: 14px;
+  cursor: pointer;
+}
+.wagers-container {
+  margin-top: 20px;
+}
 
 .Button {
     width: 120px; 
