--- a/frontend/src/components/myAccountPage/MyAccountPage.css
+++ b/frontend/src/components/myAccountPage/MyAccountPage.css
@@ -1,3 +1,40 @@
 .MyAccountSubheading {
     font-size:xx-large;
 }
+
+
+.page-content {
+    padding: 20px;
+    transition: margin-left 0.5s;
+  }
+  
+  .page-heading {
+    font-size: 24px;
+    margin-bottom: 20px;
+  }
+  
+  .button-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    margin-bottom: 20px;
+  }
+  .button-container button {
+    padding: 5px;
+    font-size: 14px;
+    cursor: pointer;
+    color: white;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    height: 200px;
+    width: 120px;
+    background: linear-gradient(180deg, 
+    #ffffff 9%, #cd561b 50%);
+  }
+  
+  
+  
+  .wagers-container {
+    margin-top: 20px;
+  }
+  
