--- a/frontend/src/components/home/home.css
+++ b/frontend/src/components/home/home.css
@@ -1,7 +1,8 @@
-.HomePage {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100vh; /* Adjust as needed */
-}
+  .logged-out-page-container {
+    text-align: center;
+  }
+  
+  .main-title {
+    font-size: 2em;
+    margin-top: 20px;
+  }
