--- a/frontend/src/components/myAccountPage/MyAccountPage.css
+++ b/frontend/src/components/myAccountPage/MyAccountPage.css
@@ -37,4 +37,41 @@
   .wagers-container {
     margin-top: 20px;
   }
-  
+.NotificationButton{
+    position: relative;
+    padding: 5px;
+    font-size: 15px;
+    line-height: 10px; 
+    cursor: pointer;
+    color: white;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    height: 50px;
+    width: 30px;
+    background: linear-gradient(180deg, 
+    #ffffff 9%, #cd561b 50%);
+
+}
+.NotificationBadge {
+    position: absolute;
+    top: 50%;
+    right: 50%;
+    transform: translate(50%, -50%); /* Center the badge */
+    background-color: #ffffff; /* Change the background color as needed */
+    color: rgb(9, 8, 8); /* Change the text color as needed */
+    border-radius: 50%;
+    font-size: 0.5rem;
+}
+.NotificationButton:hover::after {
+    content: 'People want to wager';
+    display: inline-block;
+    white-space: nowrap; 
+    position: absolute;
+    font-size: 0.5rem;
+    background-color: #cd561b;
+    color: #fff;
+    padding: 5px;
+    border-radius: 15px;
+    margin-top: -30px;
+    z-index: 1;
+  }
