reverts global changes to body font

--- a/frontend/src/Pages/style.css
+++ b/frontend/src/Pages/style.css
@@ -1,6 +1,6 @@
 /* Contains Information for shifting the Content when the Navbar Expands */
 @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Caveat&display=swap');
 
 
 .page-content {
@@ -34,8 +34,3 @@
     color: #cd561b;
   }
 
-  .page_subheading{
-    font-family: 'Shadows Into Light';
-    font-size: 35px;
-    color: #692a0a;
-  }
