--- a/frontend/src/components/VertNavBar/VertNavBar.css
+++ b/frontend/src/components/VertNavBar/VertNavBar.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Caveat&display=swap');
+
 .VertNavbar {
   position: fixed;
   top: 0;
@@ -12,6 +15,8 @@
   flex-direction: column;
   justify-content: space-between;
   border-radius: 0px 0px 20px 0px;
+  font-family: 'Caveat';
+  font-size: 30px;
 }
 
 .VertNavbar.expanded {
