--- a/frontend/src/components/walletComponent/popup.css
+++ b/frontend/src/components/walletComponent/popup.css
@@ -20,5 +20,26 @@
   font-size: 40px;
   color: #cd561b
 }
-
+.pint-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  margin-bottom: 20px;
+}
+.pint {
+  position: relative;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  padding: 5px;
+  font-size: 13px;
+  cursor: pointer;
+  color: white;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  height: 240px;
+  width: 140px;
+  background: linear-gradient(180deg, 
+    #ffffff 9%, #cd561b 50%);
+}
 
