--- a/frontend/src/components/pubGroupsPage/PubGroupsPage.css
+++ b/frontend/src/components/pubGroupsPage/PubGroupsPage.css
@@ -1,2 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Caveat&display=swap');
 
+.group-name a {
+    color: #333;
+    text-decoration: none;
+    text-indent: 2em;
+  }
+
+  .group-name a:hover {
+    color: #333;
+    text-decoration: underline;
+    text-indent: 2em;
+  }
