--- a/frontend/src/components/myAccountPage/myAccountPageComponents/notification.css
+++ b/frontend/src/components/myAccountPage/myAccountPageComponents/notification.css
@@ -20,6 +20,7 @@
 
 .notificationdetails:hover {
     text-decoration: underline;
-    font-family: 'Permanent Marker'; 
+    font-family: 'Permanent Marker';
+    color: white;
   }
 
