--- a/frontend/src/components/myAccountPage/myAccountPageComponents/notification.css
+++ b/frontend/src/components/myAccountPage/myAccountPageComponents/notification.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Caveat&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Caveat&display=swap');
 
 
